Controllers placed before buttons on anonymous users forms

--- a/templates/MainView.html
+++ b/templates/MainView.html
@@ -54,7 +54,7 @@
 							</span>
 						</div>
 					</div>
-					<!-- ko foreach: extentionComponents -->
+					<!-- ko foreach: beforeButtonsControllers -->
 						<!-- ko template: { name: $data.ViewTemplate, data: $data} --><!-- /ko -->
 					<!-- /ko -->
 					<div class="row buttons">
